--- a/src/views/user/login.pug
+++ b/src/views/user/login.pug
@@ -1,7 +1,9 @@
 extends ../base
 block content
+    if errorMessage
+        span=errorMessage
     form(method="POST")
-        input(type="text", name="email",required,placeholder="Input Email")
+        input(type="text", name="id",required,placeholder="Input Id")
         input(type="password", name="password",required,placeholder="Input Password")
         input(type="submit", value="Login")
     hr
