github social login commit

--- a/src/views/user/login.pug
+++ b/src/views/user/login.pug
@@ -6,5 +6,8 @@ block content
         input(type="text", name="id",required,placeholder="Input Id")
         input(type="password", name="password",required,placeholder="Input Password")
         input(type="submit", value="Login")
+        br
+        a(href="/user/github/start") Github with login &rarr;
+        a(href="/user/kakao/start") Kakao with login &rarr;
     hr
     a(href="/join") Create account &rarr;
