--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,7 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="/static/css/style.css")
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        //- link(rel="stylesheet", href="/static/css/style.css")
         title #{pageTitle} | #{siteName}
     body
         main
@@ -13,6 +14,8 @@ html(lang="en")
                 ul
                     li
                         a(href="/") Home
+                    li
+                        a(href="/search") search
                     if !loggedIn
                         li
                             a(href="/join") Join
