--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,14 +4,14 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-        //- link(rel="stylesheet", href="/static/css/style.css")
+        //- link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="/static/js/css/styles.css")
         title #{pageTitle} | #{siteName}
     body
         main
             h1=pageTitle
-            nav
-                ul
+            nav#navbar
+                ul.navbar__list
                     li
                         a(href="/") Home
                     li
@@ -30,5 +30,8 @@ html(lang="en")
                             a(href="/logout") Logout
                         li
                             a(href="/notice/upload") Upload
+                        li
+                            a(href="/interior") Interior
             block content
         include includes/footer
+    block script
