--- a/asset/js/css/styles.css
+++ b/asset/js/css/styles.css
@@ -1,7 +1,96 @@
+/*!****************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/client/css/components/navbar.css ***!
+  \****************************************************************************************/
+#navbar{
+    margin:auto;
+    padding:20px 50px;
+}
+
+.navbar__list{
+    display:flex;
+    justify-content: space-between;
+}
+/*!**************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/client/css/screen/interior.css ***!
+  \**************************************************************************************/
+.interior{
+    display:flex;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+.interior_navbar{
+    border-right: 1px solid black;
+    flex-basis: 20%;
+}
+
+.interior_navbar_list{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.interior_navbar_list div{
+    margin-bottom: 80px;
+}
+
+
+.interior_navbar_btn{
+    border:1px solid black;
+    padding:10px;
+    margin:5px;
+    border-radius: 5px;
+    background-color: cadetblue;
+}
+
+.interior_color{
+    display:flex;
+    justify-content: space-around;
+}
+
+.interior_color__list{
+    width:20px;
+}
+
+#canvas{
+    width:1000px;
+    height:1000px;
+    background-color:white;
+    flex-basis: 60%;
+}
+
+.interior_btn{
+    flex-basis: 10%;
+}
 /*!****************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/client/css/style.css ***!
   \****************************************************************************/
+*{
+    padding:0;
+    margin:0;
+}
+
+a{
+    text-decoration: none;
+    color:inherit;
+}
+
+ul{
+    list-style: none;
+}
+
+button:focus,
+button{
+    border:none;
+    cursor:pointer;
+    /* background-color: inherit; */
+}
+
 body{
     background-color: blanchedalmond;
     color:red;
 }
+
+/* .container{
+    padding:20px 50px;
+} */
