--- a/src/views/installer/create.pug
+++ b/src/views/installer/create.pug
@@ -1,13 +1,12 @@
 extends ../base
 
 block content
-    div.interior.container
+    div.interior.container(data-user-id=`${findInstaller ? `${findInstaller._id}` : `${user._id}`}`)
         section.interior_navbar
             div.interior_navbar_list
                 div
                     button.interior_navbar_btn.js-square 사각형
                     button.interior_navbar_btn.js-circle 원
-                    //- button.interior_navbar_btn 직선
                 div
                     input.js-range(type="range",min=0,max=10,step=1)
                 div
@@ -22,7 +21,7 @@ block content
                 button.interior_color_list(style="background-color:#fdd835")
                 button.interior_color_list(style="background-color:#6d4c41")
                 button.interior_color_list(style="background-color:#43a047")
-        canvas#canvas(data-user=user._id)
+        canvas#canvas
         div.interior_btn
             button.save_btn 저장하기
 block script 
